--- a/PracticaLW/index.html
+++ b/PracticaLW/index.html
@@ -3,6 +3,7 @@
     <head>
     	<link rel="icon" href="img/icon.png">
     	<link rel="stylesheet" href="style.css">
+    	<script src="functions.js"></script> 
     	<link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@700&display=swap" rel="stylesheet">
         <meta charset="utf-8"/>
         <title>
@@ -14,9 +15,9 @@
     	<div class="topbar">
 			<a href="index.html"><img src="img/icon_2.png" width="18" height="18" alt="Logo"></a>
 			<a href="#introduccio">Introducció</a>
-   			<a href="#biografia">Biografia</a>
-   			<a href="#obra">Obra</a>
-   			<a href="#galeria">Galeria</a>
+   			<a href="biografia.html">Biografia</a>
+   			<a href="obra.html">Obra</a>
+   			<a href="galeria.html">Galeria</a>
 	   	</div>
 	   	<div class="parallax">
 	   		<div class="caption">
@@ -27,10 +28,10 @@
 	   	<div id="introduccio">
 	   		<div class="tabcontent">
 				<div>
-					<h1><span>L'única persona del món en guanyar premis Nobel en dues ciencies</span></h1>
+					<h1><span id="escriure"></span></h1>
 				</div>
 				<ul class="list">
-					<li>Va ser denegada l'entrada a la universitat perque era una dona.</li>
+					<li>Va ser denegada l'entrada a la universitat perque era una dona</li>
 					<li>Va haver d'experimentar totes les seves investigacions en un cobert.</li>
 					<li>Va treballar amb tant urani que les seves llibretes encara son radioactives.</li>
 					<li>Va descobrir i afegir dos elements a la taula periodica, el radi (88) i el poloni (84).</li>
@@ -39,130 +40,24 @@
 				</ul>
 			</div>
 		</div>
-		<div id="biografia">
-			<div class="tabcontent">
-				<div>
-					<h1><span>Biografia</span></h1>
-				</div>
-		        <p>
-					Maria Sklodowska (Marie Curie) va neixer a Varsovia el 7 de novembre de 1867. 
-					Era la mes petita de 5 germans: Zosia, Józef, Bronya, Hela i ella. 
-					Els seus dos pares eren mestres. 
-					El seu pare, matematic i la seva mare, la qual va morir de tuberculosi quan Marie tenia 10 anys, fisica.
-				</p>
-		        <p>
-					De petita, degut a la seva curiositat, sempre imitava al seu pare i va aconseguir ser la millor alumna de la seva escola. 
-					Tot hi aixo, no va poder anar a l'universitat ja que era exclusiva per homes. 
-					Curie va haver d'estudiar de forma secreta doncs que una dona estudiés contingut universitari era un crim.  
-				</p>
-				<img src="img/curie_kid.jpg" alt="Marie Curie de petita">
-		        <p>
-					Despres de treballar durant 5 anys com a professora, el 1891 va acumular suficients diners com per a viatjar a Paris, a l'universitat de Sorbonne. 
-					Allà va a obtenir un master de fisica i matematica abans de casar-se amb el fisic frances Pierre Curie (D'aqui aconsegueix el seu cognom) l'any 1895.
-				</p>
-				<p>
-					Durant el seu matrimoni amb Pierre van convertir-se en un duo cientific inseparable. 
-					En un principi Marie i Pierre treballaven en projectes separats, però quan Marie va descobrir la radioactivitat Pierre va deixar de costat les seves investigacions per a ajudar-la amb el que fos necessari. 
-					Per desgracia, Pierre va morir el 1906 despres de ser atropellat per un carro de cavalls. 
-					Marie, devastada per la seva perdua, va complir el desig del seu marit i va convertir-se en la primera professora de l'universitat de Sorbonne.
-				</p>
-				<img src="img/curie_pierre.jpg" alt="Marie Curie amb el seu marit, Pierre Curie">
-				<p>
-					Quan la Primera Guerra Mundial va començar, Marie va dedicar tot el seu esforç i temps a la causa.
-					El seu descobriment més important d'aquest periode fou la creació de maquines de rajox X portatils, els quals van aconseguir el sobrenom de "Petits Curie".
-				</p>
-				<p>
-					Un cop la guerra va acabar, Curie va utilitzar tots els seus recursos en avançar l'investigació de la radioactivitat i per a aconseguir fons per diversos projectes fins que va morir l'any 1934 degut a enverinament provocat per l'exposició prolongada a la radiació.
-				</p>
-			</div>
-		</div>
-		<div id="obra">
-			<div class="tabcontent">
-				<div>
-					<h1><span>Obra</span></h1>
-				</div>
-				<ul class="list">
-					<li>La contribució principal i més coneguda de Marie Curie es el descobriment de la radioactivitat. </li>
-					<li>Va començar estudiant la uraninita, la qual era molt mes radioactiva que l'urani.</li>
-				</ul>
-				<img src="img/obra.jpg">
-		        <ul class="list">
-					<li>Va descobrir dos elements:</li>
-				</ul>
-				<!-- FALTA AFEGIR JAVASCRIPT-->
-	   			<button class="tablink" onclick="openTab('poloni',this,'#f77987')" id="defaultOpen">Poloni</button>
-	   			<button class="tablink" onclick="openTab('radi',this,'#F0985D')">Radi</button>
-			   	<div id="poloni" class="tabopen">
-			   		<h1>Poloni</h1>
-			   		<p>
-			   			Descobert per Marie Curie i Pierre Curie en 1898, el primer element radioactiu trobat per la parella fou nombrat en honor a la terra natal de la cientifica, Polonia. Això fou degut al fet de que en aquell moment Polonia fou partida entre Russia, Prussia i l'imperi Austro-hungar i la cientifica esperava que al nombrar-lo en honor a la seva terra li donaria més notorietat.
-			   			<br>
-			   			<br>
-			   			El poloni va ser descobert per error mentres la parella investigava la radioactivitat de la uraninita. Van descobrir que quan treien l'urani i el tori de la uraninita, la resta de materials restants era més radioactiva que abans. Degut a això, van ser capaços de separar i analitzar el poloni. 
-			   			<br>
-			   			<br>
-			   			Posteriorment, l'element es va utilitzar en el Projecte Manhattan per a desenvolupar la bomba atomica. El poloni va ser utilitzat per a desenvolupar el sistema d'inici de la reacció nuclear en cadena que faria detonar la bomba. Va decidir que s'utilitzaria perque l'element era molt menys propens a fallar a l'hora d'iniciar la reacció. Després de la segona guerra mundial, molta informació sobre el poloni va estar classificada al public fins els anys seixanta. 
-			   		</p>
-			   	</div>
-			   	<div id="radi" class="tabopen">
-			   		<h1>Radi</h1>
-			   		<p>
-			   			Cinc mesos despres de descobrir el poloni, a finals de 1989, la parella va descobrir el radi. Tot hi que ja es sabia que el Radi era altament radiactiu, en un principi el Radi va ser utilitzat per a fer pintura que il·luminés en la foscor per a rellotges, avions i panels nuclears. Fins i tot per a fer maquillatge per a dones. Per sort, progressivament aquestes practiques van anar desapareixent fins que van acabar definitivament als anys seixanta, quan l'ultima patent de pintura que utilitzava Radi va ser prohibida als Estats Units.
-			   			<br>
-			   			<br>
-			   			També es va descobrir que el radi pot produir radó, un gas radiactiu que durant un curt temps es va utilitzar per a fer tractaments contra el cancer entre els anys vint i trenta, però es va prohibir ja que aquest tractament produia anèmia i mutacions genetiques en els seus pacients. Afortunadament es van trobar tecniques més segures per utilitzar Radi minimitzant els efectes secundaris, aquestes practiques funcionen utilitzant isotops derivats del Radi que eliminen el cancer molt més efectivament que abans.
-			   		</p>
-			   	</div>
-			</div>
-		</div>
-		<div id="galeria">
-			<div class="tabcontent">
-				<!-- FALTA AFEGIR JAVASCRIPT PER SLIDESHOW -->
-				<h1><span>Galeria d'imatges</span></h1>
-				<div class="imgallery">
-					<div class="slide">
-						<a target="_blank" href="img/curie_3.jpg"><img src="img/curie_3.jpg" alt="Marie Curie investigant"></a>
-					</div>
-					<div class="slide">
-						<a target="_blank" href="img/curie_kid.jpg"><img src="img/curie_kid.jpg" alt="Marie Curie de petita"></a>
-					</div>
-					<div class="slide">
-						<a target="-blank" href="img/curie_5.png"><img src="img/curie_5.png"></a>
-					</div>
-					<a class="prev" onclick="plusSlides(-1)">&#10094;</a>
-					<a class="next" onclick="plusSlides(1)">&#10095;</a>
-				</div>
-				<div style="text-align:center">
-					<span class="dot" onclick="currentSlide(1)"></span>
-					<span class="dot" onclick="currentSlide(2)"></span>
-					<span class="dot" onclick="currentSlide(3)"></span>
-				</div>
-				<br>
-				<br>
-				<div class="imgallery">
-					<div class="slide">
-				    	<a target="_blank" href="img/curie_2.jpg"><img src="img/curie_2.jpg"></a>
-				    </div>
-				    <div class="slide">
-				    <a target="_blank" href="img/curie_pierre_2.jpg"><img src="img/curie_pierre_2.jpg"></a>
-				   	</div>
-				   	<div class="slide">
-				    <a target="_blank" href="img/curie_4.jpg"><img src="img/curie_4.jpg" width="672" height="800"></a>
-					</div>
-					<a class="prev" onclick="plusSlides(-1)">&#10094;</a>
-					<a class="next" onclick="plusSlides(1)">&#10095;</a>
-				</div>
-				<div style="text-align:center">
-					<span class="dot" onclick="currentSlide(1)"></span>
-					<span class="dot" onclick="currentSlide(2)"></span>
-					<span class="dot" onclick="currentSlide(3)"></span>
-				</div>
-			</div>
-		</div>
 		<div class="footer">
 			<a target="_blank" href="https://www.uvic.cat/">Uvic</a>
 			<a target="_blank" href="https://www.uvic.cat/grau/multimedia-aplicacions-i-videojocs">Multimèdia. Aplicacions i Videojocs</a>
 			<p>Iosif Baisan</p>
 		</div>
+		<script>
+			var i = 0;
+			var txt="L'única persona del món en guanyar premis Nobel en dues ciencies";
+			var speed = 40;
+
+			function typeWriter() {
+		  		if (i < txt.length) {
+			    	document.getElementById("escriure").innerHTML += txt.charAt(i);
+			    	i++;
+			    	setTimeout(typeWriter, speed);
+			  	}
+			}
+			window.onload=typeWriter();
+		</script>
     </body>
 </html>
